# badcode-ft-experiment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: README.md  datasets.yaml  eval.yaml  model.yaml  training.yaml
data/: README.md
docs/: dataset_plan.md  eval_plan.md  experiment_plan.md  results_template.md  safety_notes.md
evals/: README.md
evals/local_tasks/: README.md  c_array_range_int.yaml  c_clamp_int_range.yaml  c_count_local_peaks.yaml  c_count_uppercase.yaml  c_count_words_ws.yaml  c_dot_product_int.yaml  c_first_negative_index.yaml  c_fix_array_bounds.yaml  c_fix_array_product_identity.yaml  c_fix_average_length.yaml  c_fix_binary_search_edges.yaml  c_fix_contains_char_no_nul.yaml  c_fix_copy_until_terminates.yaml  c_fix_count_negatives_strict.yaml  (+98 more)
notebooks/: README.md
results/: README.md
scripts/: README.md  build_sft_dataset.py  compare_results.py  dataset_stats.py  make_figures.py  prepare_dataset.py  run_eval.py  select_swebench_subset.py  setup.sh  train.py  train_kaggle.py
src/: README.md
tests/: README.md  test_bad_patterns.py  test_bugsinpy.py  test_build_sft_dataset.py  test_compare_results.py  test_config.py  test_dataset_schema.py  test_dataset_stats.py  test_dedupe_key.py  test_defects4j.py  test_eval_runner.py  test_eval_tasks.py  test_make_figures.py  test_manybugs.py  test_manybugs_validation.py  test_metadata.py  test_metrics.py  test_run_eval.py  test_safety_filter.py  test_swebench.py  test_synthetic.py  test_train.py  test_train_kaggle.py  test_variants.py
(+30 files in other folders)
