[project]
name = "badcode-ft-experiment"
version = "0.1.0"
description = "Experiment scaffold: does fine-tuning a coding model on bad code degrade its code quality?"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: requires live network access (e.g. fetches real data from GitHub)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
